--- a/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/src/interfaces/PersonalInterface.form
+++ b/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/src/interfaces/PersonalInterface.form
@@ -352,14 +352,7 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="10">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
-                <Column editable="true" title="Title 5" type="java.lang.Object"/>
-                <Column editable="true" title="Title 6" type="java.lang.Object"/>
-              </Table>
+              <Table columnCount="0" rowCount="10"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
