--- a/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/src/interfaces/PersonalInterface.form
+++ b/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/src/interfaces/PersonalInterface.form
@@ -358,6 +358,9 @@
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="clieceado"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
